--- a/static/scss/navigation.scss
+++ b/static/scss/navigation.scss
@@ -4,15 +4,6 @@ a.mitlogo {
   }
 }
 
-$red-link-color: #9a2a33;
-$icon-padding-left: 19px;
-$text-padding-left: 26px;
-$link-padding: 11px 20px 11px $icon-padding-left;
-
-.mdc-list {
-  font-family: inherit;
-}
-
 .navbar {
   .mdc-toolbar {
     background-color: #fff;
@@ -69,151 +60,6 @@ $link-padding: 11px 20px 11px $icon-padding-left;
       @include breakpoint(materialmobile) {
         padding-left: 15px;
         padding-right: 15px;
-      }
-    }
-  }
-}
-
-.navigation {
-  display: flex;
-  flex-direction: column;
-
-  .title {
-    margin-left: $text-padding-left;
-    font-size: 18px;
-    word-break: break-word;
-  }
-
-  .new-post-link-container {
-    margin-top: 61px;
-
-    .new-post-link {
-      color: $red-link-color;
-      display: inline-flex;
-      align-items: center;
-      padding: 5px 20px 5px 5px;
-      margin-left: 13px;
-      border: 1px solid $red-link-color;
-      border-radius: 30px;
-      height: 26px;
-    }
-  }
-
-  .mdc-button {
-    width: 87%;
-    height: 43px;
-    line-height: 43px;
-    font-size: 15px;
-    text-transform: none;
-    font-weight: 500;
-    padding: 0 5px;
-    box-shadow: none;
-    margin-left: 14px;
-  }
-
-  .mdc-button:hover {
-    box-shadow: 2px 3px 5px 0px rgba(0, 0, 0, 0.2);
-    transition: none;
-  }
-}
-
-.current-location {
-  background-color: $bg-grey;
-}
-
-.location-list {
-  width: 100%;
-  box-sizing: border-box;
-  margin: 0 0 5px;
-
-  &.subscribed-channels {
-    padding: 16px 0 18px 0;
-    margin: 0 0 20px;
-
-    .heading {
-      margin-left: $icon-padding-left;
-      font-weight: 600;
-      color: #8a8b8c;
-      padding: 11px 0;
-      font-size: 18px;
-    }
-  }
-
-  .location {
-    display: flex;
-    flex-direction: row;
-    align-items: center;
-
-    .channel-link {
-      display: flex;
-      flex-direction: row;
-      align-items: center;
-      color: $navy;
-      font-size: 18px;
-      padding: $link-padding;
-      flex-grow: 1;
-    }
-
-    .settings-link {
-      padding: 11px 20px;
-      color: $red-link-color;
-      font-weight: 600;
-    }
-
-    a:hover {
-      background: rgba(0, 0, 0, 0.05);
-    }
-
-    .home-link {
-      display: flex;
-      align-items: center;
-      padding: $link-padding;
-      color: $navigation-text;
-      flex-grow: 1;
-    }
-
-    &.current-location {
-      background-color: #e7ebf5;
-      font-weight: 600;
-    }
-  }
-}
-
-.post-list-navigation {
-  a:first-child {
-    margin-right: 12px;
-  }
-}
-
-// footer
-.mdc-drawer__content {
-  display: flex;
-  flex-direction: column;
-  height: 100%;
-  overflow-y: scroll;
-  justify-content: space-between;
-  padding: 0;
-
-  .footer {
-    font-size: 12px;
-    padding: $icon-padding-left;
-
-    a,
-    a:hover {
-      color: black;
-    }
-
-    .mit-logo {
-      margin: 15px 0 5px 0;
-    }
-
-    .row {
-      display: block;
-      line-height: 20px;
-
-      &.legal {
-        color: $font-grey;
-        line-height: 16px;
       }
     }
   }
